30_applications/media/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    gateway.networking.k8s.io/public-routes: "true"
