30_applications/media/audiobookshelf_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf-server
  namespace: media
  labels:
    app.kubernetes.io/name: audiobookshelf-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf-server
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: audiobookshelf
          image: "ghcr.io/advplyr/audiobookshelf:2.37.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
            - name: audible
              mountPath: /audible
              readOnly: true
            - name: audiobooks
              mountPath: /audiobooks
            - name: ebooks
              mountPath: /ebooks
            - name: podcasts
              mountPath: /podcasts
              readOnly: true
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata-pvc
        - name: audible
          persistentVolumeClaim:
            claimName: audible-pvc
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobooks-pvc
        - name: ebooks
          persistentVolumeClaim:
            claimName: ebooks-pvc
        - name: podcasts
          emptyDir: {}
      dnsConfig:
          options:
            - name: ndots
              value: "2"
