30_applications/media/jellyfin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-server
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin-server
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: jellyfin
          image: "docker.io/jellyfin/jellyfin:10.11.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: movies
              mountPath: /movies
              readOnly: true
            - name: tv
              mountPath: /tv
              readOnly: true
            - name: music
              mountPath: /music
              readOnly: true
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: cache
          emptyDir: {}
        - name: config-templates
          configMap:
            name: jellyfin-config
        - name: sso-config
          secret:
            secretName: jellyfin-sso-config
        - name: movies
          persistentVolumeClaim:
            claimName: movies-pvc
        - name: tv
          persistentVolumeClaim:
            claimName: tv-pvc
        - name: music
          persistentVolumeClaim:
            claimName: music-pvc
      dnsConfig:
          options:
            - name: ndots
              value: "2"
