30_applications/media/audiobookshelf_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app.kubernetes.io/name: audiobookshelf-server
spec:
  selector:
    app.kubernetes.io/name: audiobookshelf-server
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
