30_applications/media/audiobookshelf_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app.kubernetes.io/name: audiobookshelf-server
spec:
  parentRefs:
    - name: public
      namespace: ingress
      sectionName: https-wildcard
  hostnames:
    - "books.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: audiobookshelf
          port: 80
