30_applications/media/audiobookshelf_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app.kubernetes.io/name: audiobookshelf-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress
      namespace: ingress
      sectionName: https
  hostnames:
    - "books.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 1h
      backendRefs:
        - group: ""
          kind: Service
          name: audiobookshelf
          port: 80
