30_applications/media/jellyfin_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin-server
  annotations:
    cert-manager.io/cluster-issuer: ${vals_infra_certManager_issuer}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "jellyfin.${vals_info_cluster_domain}"
      secretName: jellyfin-tls
  rules:
    - host: "jellyfin.${vals_info_cluster_domain}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
